[package]
name = "sauron"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
json = "0.12.4"
statsd = "^0.13.1"
lazy_static = "1.4.0"
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
home = "0.5.3"
url = "2.2.2" 
ctrlc = "3.2.1"
toml = "0.5.8"
